style: visibility fixes for mobile

--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -5,6 +5,7 @@ h3::before {
   height: 50%;
   overflow: hidden;
   text-align: center;
+  visibility: visible;
 }
 
 h3 {
